Refactored the core package to avoid exposing entity and replace it with value objects